<package>
    <name>force_rotate_recovery</name>
    <version>0.0.5</version>
    <description>
        The force_rotate_recovery package
    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>contradict@gmail.com</author>
    <author>Daiki Maekawa</author>
    <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>base_local_planner</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>eigen</run_depend>

    <export>
        <nav_core plugin="${prefix}/force_rotate_plugin.xml" />
    </export>

</package>
