<?xml version="1.0"?>
<package>
  <name>icart_mini</name>
  <version>0.0.5</version>
  <description>The icart_mini metapackage</description>
  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
  <author>Daiki Maekawa</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>force_rotate_recovery</run_depend>
  <run_depend>icart_mini_description</run_depend>
  <run_depend>icart_mini_navigation</run_depend>
  <run_depend>icart_mini_driver</run_depend>
  <run_depend>icart_mini_gazebo</run_depend>
  <run_depend>icart_mini_control</run_depend>
  <run_depend>waypoints_navigation</run_depend>
  <run_depend>combine_dr_measurements</run_depend>

  <export>
    <metapackage/>
  </export>

</package>

