<?xml version="1.0"?>
<package>
  <name>icart_mini</name>
  <version>0.1.3</version>
  <description>This package provides packages related to navigation of i-Cart mini.</description>
  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>
  <author>Daiki Maekawa</author>
  <url type="website">http://wiki.ros.org/icart_mini</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>icart_mini_description</run_depend>
  <run_depend>icart_mini_driver</run_depend>
  <run_depend>icart_mini_gazebo</run_depend>
  <run_depend>icart_mini_control</run_depend>

  <export>
    <metapackage/>
  </export>

</package>

