<?xml version="1.0"?>
<package>
  <name>icart_mini_description</name>
  <version>0.1.3</version>
  <description>The icart_mini_description package</description>

  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
  <author email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</author>
  <url type="website">http://wiki.ros.org/icart_mini_description</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
