<?xml version="1.0"?>
<package>
  <name>icart_mini_driver</name>
  <version>0.1.3</version>
  <description>The icart_mini_driver package</description>

  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
  <author>Daiki Maekawa</author>

  <license>BSD</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>ypspur</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>ypspur</run_depend>

  <export>
  </export>
</package>
