<?xml version="1.0"?>
<package>
  <name>icart_mini_gazebo</name>
  <version>0.0.1</version>
  <description>The icart_mini_gazebo package</description>

  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>

  <license>BSD</license>

  <author email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--run_depend>icart_mini_description</run_depend-->
  <!--run_depend>icart_mini_control</run_depend-->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/icart_mini_hw_sim_plugins.xml"/>
  </export>
</package>
